--- a/age-calculator-app-main/index.css
+++ b/age-calculator-app-main/index.css
@@ -96,7 +96,7 @@ hr{
 @media screen and (max-width:650px) {
     .input{
         width: 3rem;
-        height: 1rem;
+        height: 1remg;
     }
     
 }
