--- a/age-calculator-app-main/index.css
+++ b/age-calculator-app-main/index.css
@@ -1,102 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
-.nav{
-    width: 550px;
-    height: 410px;
-    background-color: hsl(0, 0%, 100%);
-    border-block-end-style: initial;
-    padding: 2rem;
-    border-radius: 1rem;
-    border-end-end-radius: 10rem;
-}
-.div{
-    display: flex;
-    gap: 2rem;
-}
-.h5{
-    letter-spacing: 3px;
-    color: hsl(0, 1%, 44%);
-    display: flex;
-    font-family: 'Poppins', sans-serif;
-}
-.input{
-    width: 6rem;
-    height: 2.5rem;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    text-align: center;
-    margin-top: -15px;
-    cursor: pointer;
-    border-radius: 3px;
-}
-.input:hover{
-    outline-color: hsl(259, 100%, 65%);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-#ee{
-    color: hsl(0, 100%, 67%);
-    display: flex;
-    font-size: xx-small;
-    text-transform: capitalize;
-    font-weight: bold;
-    margin-top: 5px;
+.calculator {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: hsl(0, 0%, 94%);
 }
 
-.div1{
-    margin-top: 35px;
-    display: flex;
+.calculator_container {
+  width: 700px;
+  background-color: hsl(0, 0%, 100%);
+  border-block-end-style: initial;
+  padding: 2rem;
+  border-radius: 1rem;
+  border-end-end-radius: 10rem;
 }
-hr{
-    color:hsl(0, 1%, 44%) ;
-    width: 460px;
-    margin-left: 5px;
-    height: 0;
+
+/************ CALCULATOR FORM *************/
+.calculator_form_inputs {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  color: hsl(0, 1%, 44%);
 }
-.btn{
-    width: 70px;
-    height: 70px;
-    border-radius: 35px;
-    margin-top: -26px;
-    margin-right: 12px;
-    background-color: hsl(259, 100%, 65%) ;
-    border-style: none;
-    cursor: pointer;
+
+.calculator_form_input_heading {
+  color: hsl(0, 1%, 44%);
+  font-weight: bolder;
+  font-size: 12px;
+  margin-bottom: 8px;
+  display: block;
+  letter-spacing: 3px;
 }
-.btn:hover{
-    background-color: black;
+
+.calculator_form_input_heading_error {
+  color: hsl(0, 100%, 67%);
 }
-.div3{
-    display: flex;
-    font-size: 80px;
+
+.calculator_form_input_box {
+  width: 7rem;
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 3px;
+  border: 1px solid hsl(0, 0%, 86%);
 }
-#p{
-    color: hsl(259, 100%, 65%);
-    font-weight: bold;
-    font-style: italic;
+.calculator_form_input_error {
+  font-style: italic;
+  color: hsl(0, 100%, 67%);
+  display: flex;
+  font-size: 10px;
+  text-transform: capitalize;
+  font-weight: light;
+  margin-top: 10px;
 }
-.p1{
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-style: italic;
+
+.calculator_form_input_box:hover {
+  border: 1px solid hsl(259, 100%, 65%);
 }
-#d3{
-    margin-top: -110px ;
+
+.calculator_form_button_container {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
-#d4{
-    margin-top: -200px;
+.calculator_form_button {
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  background-color: hsl(259, 100%, 65%);
+  border-style: none;
+  cursor: pointer;
 }
-#d5{
-    margin-top: -210px;
+.calculator_form_button:hover {
+  background-color: black;
 }
-@media screen and (max-width:650px) {
-    .input{
-        width: 3rem;
-        height: 1remg;
-    }
-    
+
+.calculator_form_button_line {
+  width: 90%;
+}
+
+/************ RESULT CONTAINER *************/
+.result_container {
+  margin-top: 15px;
+  font-style: italic;
+  font-size: 5rem;
+  font-weight: 800;
+}
+
+.result_item_container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 0;
+}
+
+.result_item {
+  color: hsl(259, 100%, 65%);
+  margin: 0;
+}
+
+.result_item_label {
+  color: hsl(0, 0%, 8%);
+  margin: 0;
+}
+@media screen and (max-width: 650px) {
+    .calculator_form_button_container {
+        display: grid;
+      }
+      .calculator_form_button {
+       margin-left: 150px;
+       margin-top: -30px;
+      }
+      .result_container {
+        font-size: 3.5rem;
+        font-weight: 700;
+        margin-left: 70px;
+      }
+      .calculator_form_inputs {
+        display: flex;
+        gap: .5rem;
+      }
 }
